add angular to app

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,8 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+// Material Angular
+@import '@angular/material/core/theming/all-theme';
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@include mat-core();
