--- a/app/javascript/hello_angular/app/app.component.html
+++ b/app/javascript/hello_angular/app/app.component.html
@@ -1,2 +1,2 @@
-<h1 *ngIf="name">Hello {{name}}</h1>
+<h1 *ngIf="name" class="test">Hello {{name}}</h1>
 <button mat-raised-button color="primary">Primary</button>
