--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_pack_tag 'hello_angular' %>
+
 <hello-angular>Loading...</hello-angular>
 
 <%= javascript_pack_tag 'hello_angular' %>
