add map, notifications and localStorage usage

--- a/app/javascript/hello_angular/app/app.component.html
+++ b/app/javascript/hello_angular/app/app.component.html
@@ -1,2 +1,9 @@
-<app-start *ngIf="!adress" (onAdressChange)="onAdressChange($event)"></app-start>
-<app-map *ngIf="adress"></app-map>
+<div class="main-wrapper">
+    <mat-toolbar>
+        <img class="toolbar-logo" src='~corony.png' />
+    </mat-toolbar>
+    
+    <app-start #start *ngIf="!adress && !lat && !lon; else logo" (onAdressChange)="onAdressChange($event)"></app-start>
+    <app-map *ngIf="adress && lat && lon" [localStorageKey]="ls_key" [adress]="adress" [lat]=lat [lon]="lon"></app-map>
+    <div *ngIf="adress && !lat && !lon">loading adress</div>
+</div>
