implement markers for orders on map

--- a/app/javascript/hello_angular/app/app.component.html
+++ b/app/javascript/hello_angular/app/app.component.html
@@ -4,6 +4,6 @@
     </mat-toolbar>
     
     <app-start #start *ngIf="!adress && !lat && !lon; else logo" (onAdressChange)="onAdressChange($event)"></app-start>
-    <app-map *ngIf="adress && lat && lon" [localStorageKey]="ls_key" [adress]="adress" [lat]=lat [lon]="lon"></app-map>
+    <app-map *ngIf="adress && lat && lon" [localStorageKey]="ls_key" [adress]="adress" [lat]=lat [lon]="lon" [layers]="layers"></app-map>
     <div *ngIf="adress && !lat && !lon">loading adress</div>
 </div>
