--- a/app/javascript/hello_angular/app/features/map/map.component.html
+++ b/app/javascript/hello_angular/app/features/map/map.component.html
@@ -1,6 +1,6 @@
 
      <div class="map-container">
-          <div *ngIf="options" class="map" leaflet [leafletOptions]="options">
+          <div *ngIf="options" class="map" leaflet [leafletOptions]="options" [leafletLayers]="layers">
           </div>
           <div class="tasks">
                <h2>Aufträge</h2>
