--- a/app/views/pages/listings.html.erb
+++ b/app/views/pages/listings.html.erb
@@ -7,9 +7,8 @@
       <% @users.each_with_index do |user, index| %>
 
           <li class="list-group-item d-flex justify-content-between w-100 <%= 'bg-light' if index.odd?  %>">
-          <%= confirm_order_url %>
           <p class='w-25'><%= user.created_at.strftime("%-d %b %Y %H:%M") %></p>
-          <p class='w-25'><%= "Oma" if user.senior %></p>
+          <p class='w-25'><%= user.senior ? "Oma #{user.name}" : name %></p>
           <p class='w-25'><%= user.address %></p>
           <% user.open_orders.each do |order| %>
             <p class='w-25'><%= order.list %></p>
