--- a/app/javascript/hello_angular/app/features/map/map.component.scss
+++ b/app/javascript/hello_angular/app/features/map/map.component.scss
@@ -13,10 +13,15 @@
 .map {
     max-height: 80vh;
     max-width: 80vh;
+    min-height: 40vh;
     height: 100%;
     width: 100%;
 }
 
 .tasks {
     padding: 20px;
+}
+
+.order-card {
+    margin-bottom: 10px;
 }
