--- a/app/javascript/hello_angular/app/app.component.scss
+++ b/app/javascript/hello_angular/app/app.component.scss
@@ -71,6 +71,8 @@ button:focus {
 
 .toolbar-logo {
   max-width: 50px;
+  margin: 10px;
+  cursor: pointer;
 }
 
 .main-wrapper {
@@ -80,7 +82,9 @@ button:focus {
 }
 
 app-map {
-  height: 100%;
+  display: flex;
+  flex-grow: 1;
+  flex-basis: 0;
 }
 
 app-start {
@@ -104,4 +108,30 @@ simple-snack-bar, .mat-simple-snackbar-action {
 }
 .notification-notice {
   background: rgba(33,33,33,.75);
+}
+
+.acceptorder {
+  box-sizing: border-box;
+  position: relative;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  -webkit-tap-highlight-color: transparent;
+  display: inline-block;
+  white-space: nowrap;
+  text-decoration: none;
+  vertical-align: baseline;
+  text-align: center;
+  margin: 0;
+  min-width: 64px;
+  line-height: 36px;
+  padding: 0 16px;
+  border-radius: 4px;
+  overflow: visible;
+  transform: translate3d(0, 0, 0);
+  transition: background 400ms cubic-bezier(0.25, 0.8, 0.25, 1),box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
 }
