--- a/app/javascript/hello_angular/app/features/map/map.component.html
+++ b/app/javascript/hello_angular/app/features/map/map.component.html
@@ -1,15 +1,14 @@
-
-     <div class="map-container">
-          <div *ngIf="options" class="map" leaflet [leafletOptions]="options" [leafletLayers]="layers">
-          </div>
-          <div class="tasks">
-               <h2>Aufträge</h2>
-               <ul>
-                    <li>Dummy 1</li>
-                    <li>Dummy 2</li>
-                    <li>Dummy 3</li>
-                    <li>Dummy 4</li>
-               </ul>
-               <button mat-raised-button color="primary" (click)="resetAdress()">Adresse zurücksetzen</button>
-          </div>
+<div class="map-container">
+     <div *ngIf="options" class="map" leaflet [leafletOptions]="options" [leafletLayers]="layers"
+          (leafletMapReady)="onMapReady($event)">
      </div>
+     <div *ngIf="myOrders && myOrders.length != 0" class="tasks">
+          <h2>Aufträge</h2>
+          <mat-card class="order-card" *ngFor="let order of myOrders">
+               <p>Name: {{ order.owner.name }}</p>
+               <p>Liste: {{ order.list }}</p>
+               <app-executed [order]="order" (executedOrder)="executeOrder($event)"></app-executed>
+               <app-deliver [order]="order" (deliveredOrder)="deliverOrder($event)"></app-deliver>
+          </mat-card>
+     </div>
+</div>
