--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,8 @@
-<div class="container">
+<%= render 'shared/navbar' %>
+
+<div class="container devise">
   <div class="row justify-content-center">
-    <div class="col-sx-12 col-md-5">
+    <div class="col-sx-12 col-md-5  bg-white p-3 rounded">
       <h2>Sign up</h2>
 
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -21,7 +23,7 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, "Sign up" %>
+        <%= f.button :submit, "Sign up", class: 'btn btn-success btn-block' %>
       </div>
       <% end %>
 
