--- a/app/javascript/hello_angular/app/features/map/map.component.scss
+++ b/app/javascript/hello_angular/app/features/map/map.component.scss
@@ -9,6 +9,22 @@
         flex-direction: column;
     }
 }
+.map-wrapper {
+    max-width: 80vh;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.map-card {
+    padding: 0 !important;
+    max-height: 80vh;
+    min-height: 40vh;
+    display: flex !important;
+    flex-grow: 1;
+    flex-direction: column;
+}
 
 .map {
     max-height: 80vh;
@@ -16,6 +32,10 @@
     min-height: 40vh;
     height: 100%;
     width: 100%;
+}
+
+.map-heading {
+    margin-left: 20px;
 }
 
 .tasks {
