--- a/app/javascript/hello_angular/app/features/start/start.component.html
+++ b/app/javascript/hello_angular/app/features/start/start.component.html
@@ -23,7 +23,9 @@
                 </mat-form-field>
                 <button class="adress-button" mat-raised-button color="primary">Anzeigen</button>
             </form>
-            <img class="wvv-logo" src='~Logo_Projekt_01.png' />
+            <a href="https://wirvsvirushackathon.org/" target='_blank' >
+                <img class="wvv-logo" src='~Logo_Projekt_01.png' />
+            </a>
         </div>
     </div>
 </div>
