Implemented our audio:

--- a/app/views/pages/listings.html.erb
+++ b/app/views/pages/listings.html.erb
@@ -1,6 +1,5 @@
 <%= render 'shared/navbar' %>
-
-<div class="container">
+y<div class="container">
   <div class="row bg-white m-4 p-3">
     <div class="col-md-12">
       <ul class="list-group w-100 mx-2 log-list">
